# local-encoding

./: Cargo.toml
src/: lib.rs  winapi.rs  windows.rs
